--- a/style.css
+++ b/style.css
@@ -1,57 +1,148 @@
-body{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-image:url('./Img/spookyBg.jpg');
+body {
+  background-image: url("./Img/spookyBg.jpg");
+  margin: 0;
+  padding: 0;
 }
+
+body * {
+  font-family: "Permanent Marker", cursive;
+}
+
 .buttonContainer {
-    display: flex;
-    width: 250px;
-    padding:10px;
-    height: 55px;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
-.time{
-    font-family: 'Permanent Marker', cursive;
-    padding:10px;
-    width:230px;
-    height:40px;
-    margin: 0% auto;
-    margin: 10px;
-    border: solid 5px orange;
+
+.time {
+  font-family: "Permanent Marker", cursive;
+  color: orange;
+  text-align: center;
+  margin: 0% auto;
+  margin: 10px;
+  border: solid 5px orange;
 }
 
 .spooky_img {
-    position: relative;
-    width: 230px;
-    height: 230px;
-    margin: 0% auto;
-    border: solid 5px orange;
+  position: relative;
+  border: solid 5px orange;
 }
 
 button {
-    border: solid black 1px;
-    border-radius: 10px;
-    width: 70px;
-    height: 30px;
-    background-color: orange;
-    color: black;
-    font-weight: bold;
+  border: solid black 1px;
+  border-radius: 4px;
+  background-color: orange;
+  color: black;
+  font-weight: bold;
 }
 
 .spookySlicer {
-    position: relative;
-    border: solid 10px orange;
-    width: 640px;
-    height: 590px;
-    margin: 0% auto;
-    margin-top: 10px;
+  position: relative;
+  border: solid 4px orange;
+  margin: 0% auto;
+  margin-top: 3px;
 }
 
 canvas {
-    position: absolute;
-    border: solid 2px orange;
-    /* transition: all 10s ease-in-out; */
+  position: absolute;
+  border: solid 2px orange;
+}
+
+.alertClass {
+  position: fixed;
+  margin: 0 auto;
+  top: calc(50% - 200px);
+  left: calc(50% - 200px);
+  background-image: url("./Img/spoookyAlert.jpg");
+  width: 500px;
+  height: 100px;
+  border: solid 1px orange;
+  text-align: center;
+  padding-top: 50px;
+}
+.alertClass h1 {
+  color: orange;
+  display: block;
+  margin: 0 auto;
+}
+.alertClass button {
+  border: solid 1px orange;
+  width: 50px;
+  height: 30px;
+}
+
+.empty {
+  background-color: rgba(255, 166, 0, 0.493) !important;
+}
+
+@media screen and (max-width: 1460px) {
+  .spooky_img {
+    display: block;
+    min-height: 580px;
+    min-width: 640px;
+    margin: 0 auto;
+  }
+
+  .buttonContainer {
+    min-width: 640px;
+    margin: 0;
+    padding: 10px;
+  }
+  .buttonContainer button {
+    width: 100%;
+    min-height: 30px;
+  }
+
+  .time {
+    min-width: 680px;
+  }
+
+  .spookySlicer {
+    margin: 0 auto;
+    min-height: 580px;
+    height: 580px;
+    min-width: 640px;
+    width: 640px;
+    height: auto;
+  }
+  .spookySlicer img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media screen and (min-width: 1461px) {
+  .spooky_img {
+    display: block;
+    min-height: 580px;
+    min-width: 640px;
+  }
+
+  .buttonContainer {
+    min-width: 680px;
+    margin: 0;
+    padding: 10px;
+  }
+  .buttonContainer button {
+    width: 100%;
+    min-height: 30px;
+  }
+
+  .time {
+    min-width: 680px;
+  }
+
+  .spookySlicer {
+    position: fixed !important;
+    top: 0px;
+    right: 0 !important;
+    min-height: 580px;
+    height: 580px;
+    min-width: 640px;
+    width: 640px;
+    height: auto;
+  }
+  .spookySlicer img {
+    width: 100%;
+    height: 100%;
+  }
 }
