--- a/style.css
+++ b/style.css
@@ -1,11 +1,28 @@
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background: grey;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: orange;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 body {
   background-image: url("./Img/spookyBg.jpg");
   margin: 0;
   padding: 0;
 }
-
 body * {
-  font-family: "Permanent Marker", cursive;
+  font-family: "Griffy", cursive;
 }
 
 .buttonContainer {
@@ -15,16 +32,12 @@ body * {
 }
 
 .time {
-  font-family: "Permanent Marker", cursive;
   color: orange;
   text-align: center;
   margin: 0% auto;
-  margin: 10px;
-  border: solid 5px orange;
 }
 
 .spooky_img {
-  position: relative;
   border: solid 5px orange;
 }
 
@@ -46,6 +59,26 @@ button {
 canvas {
   position: absolute;
   border: solid 2px orange;
+}
+
+.canvasNumber3 {
+  width: calc(100% / 3);
+  height: calc(100% / 3);
+}
+
+.canvasNumber4 {
+  width: calc(100% / 4);
+  height: calc(100% / 4);
+}
+
+.canvasNumber5 {
+  width: calc(100% / 5);
+  height: calc(100% / 5);
+}
+
+.canvasNumber6 {
+  width: calc(100% / 6);
+  height: calc(100% / 6);
 }
 
 .alertClass {
@@ -76,17 +109,19 @@ canvas {
 }
 
 @media screen and (max-width: 1460px) {
+  body {
+    overflow-x: hidden;
+  }
+
   .spooky_img {
     display: block;
-    min-height: 580px;
-    min-width: 640px;
     margin: 0 auto;
+    width: calc(100vw - 10px);
   }
 
   .buttonContainer {
-    min-width: 640px;
+    width: 100vw;
     margin: 0;
-    padding: 10px;
   }
   .buttonContainer button {
     width: 100%;
@@ -94,16 +129,15 @@ canvas {
   }
 
   .time {
-    min-width: 680px;
+    width: calc(100vw - 4px);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: solid 2px orange;
   }
 
   .spookySlicer {
-    margin: 0 auto;
-    min-height: 580px;
-    height: 580px;
-    min-width: 640px;
-    width: 640px;
-    height: auto;
+    width: calc(100vw - 8px);
+    height: calc(100vw - 8px);
   }
   .spookySlicer img {
     width: 100%;
@@ -113,12 +147,9 @@ canvas {
 @media screen and (min-width: 1461px) {
   .spooky_img {
     display: block;
-    min-height: 580px;
-    min-width: 640px;
   }
 
   .buttonContainer {
-    min-width: 680px;
     margin: 0;
     padding: 10px;
   }
@@ -127,19 +158,12 @@ canvas {
     min-height: 30px;
   }
 
-  .time {
-    min-width: 680px;
-  }
-
   .spookySlicer {
     position: fixed !important;
     top: 0px;
     right: 0 !important;
-    min-height: 580px;
-    height: 580px;
-    min-width: 640px;
-    width: 640px;
-    height: auto;
+    width: 650px;
+    height: 591px;
   }
   .spookySlicer img {
     width: 100%;
