--- a/style.scss
+++ b/style.scss
@@ -1,170 +1,240 @@
-@mixin widthAndHeight($wt){
-    width:calc(100% / $wt);
-    height:calc(100% / $wt);
+$cyberBlue:#00ffed;
+$cyberYellow:#caff01;
+$cyberGreen:#01ff11;
+$cyberPink:#ff0082;
+$cyberViolet:#a400ff;
+
+@mixin widthAndHeight($wt) {
+    width: calc(100% / $wt);
+    height: calc(100% / $wt);
 }
 
+@font-face {
+    font-family: cyberNumbers;
+    src: url('./fonts/Kill\ The\ Noise.otf') format("opentype");
+}
 
 ::-webkit-scrollbar {
     width: 2px;
-  }
-    ::-webkit-scrollbar-track {
-    background:grey; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: orange; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-body{
-    background-image:url('./Img/spookyBg.jpg');
+}
+
+::-webkit-scrollbar-track {
+    background: grey;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: $cyberBlue;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+body {
+    background-image: url('./Img/cyberBg.jpg');
+    background-repeat: no-repeat;
     margin: 0;
+
     padding: 0;
-    *{
-        font-family: 'Griffy', cursive;
+
+    * {
+        font-family: 'cyberNumbers' !important;
     }
 }
+
 .buttonContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.time{
-    color: orange;
+
+.time {
+    color: $cyberBlue;
     text-align: center;
     margin: 0% auto;
 }
+
 .spooky_img {
-    border: solid 5px orange;
+    border: solid 5px $cyberBlue;
 }
+
 button {
     border: solid black 1px;
     border-radius: 4px;
-    background-color: orange;
+    background-color: $cyberYellow;
     color: black;
     font-weight: bold;
-}  
+}
+
 .spookySlicer {
     position: relative;
-    border: solid 4px orange;
+    border: solid 4px $cyberBlue;
     margin: 0% auto;
     margin-top: 3px;
 }
+
 canvas {
     position: absolute;
-    border: solid 2px orange;
+    // border: solid 1px $cyberBlue;
 }
 
-.canvasNumber3{
-    width:calc(100% / 3);
-    height:calc(100% / 3);
+.canvasNumber3 {
+    width: calc(100% / 3);
+    height: calc(100% / 3);
 }
 
-.canvasNumber4{
-    width:calc(100% / 4);
-    height:calc(100% / 4);
+.canvasNumber4 {
+    width: calc(100% / 4);
+    height: calc(100% / 4);
 }
 
-.canvasNumber5{
-    width:calc(100% / 5);
-    height:calc(100% / 5);
+.canvasNumber5 {
+    width: calc(100% / 5);
+    height: calc(100% / 5);
 }
 
-.canvasNumber6{
-    width:calc(100% / 6);
-    height:calc(100% / 6);
+.canvasNumber6 {
+    width: calc(100% / 6);
+    height: calc(100% / 6);
 }
-.alertClass{
-    position:fixed;
+
+.alertClass {
+    position: fixed;
     margin: 0 auto;
-    top:calc(50% - 200px);
-    left:calc(50% - 200px);
-    background-image: url('./Img/spoookyAlert.jpg');
-    width:500px;
-    height:100px;
-    border: solid 1px orange;
+    top: calc(50% - 200px);
+    left: calc(50% - 200px);
+    background-color: black;
+    width: 500px;
+    height: 100px;
+    border: solid 1px $cyberBlue;
     text-align: center;
-    padding-top:50px;
-    h1{
-        color: orange;
+    padding-top: 50px;
+
+    h1 {
+        color: $cyberBlue;
         display: block;
         margin: 0 auto;
 
     }
-    button{
-        border: solid 1px orange;
-        width:50px;
+
+    button {
+        border: solid 3px $cyberBlue;
+        width: 50px;
         height: 30px;
+
     }
 }
-.empty{
-    background-color: rgba(255, 166, 0, 0.493) !important;
+
+.empty {
+    background-color: #00ffee88 !important;
 }
+
 // dla małych komputerków 
-@media screen and (max-width: 1460px) {
-    body{
+@media screen and (max-width: 900px) {
+    body {
         overflow-x: hidden;
     }
-    .spooky_img{
+
+    .spooky_img {
         display: block;
         margin: 0 auto;
-        width:calc(100vw - 10px);  
-    
+        width: calc(100vw - 10px);
+
     }
-    .buttonContainer{
-        width:100vw;
-        margin:0;
-        button{
-            width:100%;
-            min-height:30px;
+
+    .buttonContainer {
+        width: 100vw;
+        margin: 0;
+
+        button {
+            width: 100%;
+            min-height: 30px;
+
+
+        }
+
+        button:hover {
+            border: solid 1px $cyberBlue;
         }
     }
-    .time{
-        width:calc(100vw - 4px);
+
+    .time {
+        width: calc(100vw - 4px);
         margin-top: 10px;
         margin-bottom: 10px;
-        border: solid 2px orange;
+        border: solid 2px $cyberBlue;
 
     }
-    .spookySlicer{
+
+    .spookySlicer {
         // margin:0 auto;
         width: calc(100vw - 8px);
-        height:calc(100vw - 8px);
-        img{
-            width:100%;
-            height:100%;
+        height: calc(100vw - 8px);
+
+        img {
+            width: 100%;
+            height: 100%;
         }
     }
-  
+
 }
+
 //dla dużych komputerków 
-@media screen and (min-width: 1461px){
-    .spooky_img{
+@media screen and (min-width: 900px) {
+    .spooky_img {
+        margin: 10px;
+        margin-left: 8%;
         display: block;
+        width: 30vw;
+        height: 30vw;
+        max-width: 700px;
+        max-height: 700px;
     }
-    .buttonContainer{
-        margin:0;
-        padding:10px;
-        button{
-            width:100%;
-            min-height:30px;
+
+    .buttonContainer {
+        position: absolute;
+        bottom: 0;
+        margin: 0;
+        padding: 10px;
+        width: 45vw;
+        height: 10vh;
+
+        button {
+            font-size: 5vh;
+            line-height: 5vh;
+            width: 50%;
+            margin: 10px;
+            min-height: 30px;
         }
 
     }
- 
-    .spookySlicer{
+
+    .time {
+        position: absolute;
+        bottom: 15vh;
+        width: 50%;
+        margin: 0;
+
+        img {
+            width: calc(100% / 13);
+            margin: 0;
+            height: 50px;
+        }
+    }
+
+    .spookySlicer {
         position: fixed !important;
-        top:0px ;
-        right:0 !important;
-        width:650px;
-        height:591px;
-        img{
-            width:100%;
-            height:100%;
+        top: 10px;
+        right: 10px !important;
+        width: calc(50vw - 40px);
+
+        height: calc(50vw - 40px);
+
+        img {
+            width: 100%;
+            height: 100%;
         }
     }
 
