--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   padding: 0;
 }
 body * {
-  font-family: "cyberNumbers" !important;
+  font-family: "Roboto Mono", monospace !important;
 }
 
 .buttonContainer {
@@ -85,6 +85,54 @@ canvas {
   height: calc(100% / 6);
 }
 
+.formContainer {
+  position: absolute;
+  top: calc(60% - 30vh);
+  left: calc(50% - 30vw);
+  width: 60vw;
+  height: 30vh;
+  padding: 3%;
+  background-color: black;
+  border: solid 1px #00ffed;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.formContainer p {
+  color: #00ffed;
+  font-size: 30pt;
+}
+.formContainer input[type=text] {
+  margin-top: 50%;
+  background-color: #caff01;
+  margin: 0 auto;
+  width: 60%;
+  height: 40px;
+  border: solid 3px #00ffed;
+  border-radius: 3px;
+  line-height: 40px;
+  font-size: 20pt;
+}
+.formContainer input[type=text]:focus {
+  border: solid 3px #ff0082;
+}
+.formContainer button {
+  margin: 0 auto;
+  height: 50px;
+  font-size: medium;
+  padding: 3px;
+  transition: all ease-in 0.3s;
+}
+.formContainer button:after {
+  content: "Zapisz";
+  margin: 3px;
+}
+.formContainer button:hover {
+  border: solid 1px #ff0082;
+}
+
 .alertClass {
   position: fixed;
   margin: 0 auto;
@@ -104,8 +152,12 @@ canvas {
 }
 .alertClass button {
   border: solid 3px #00ffed;
-  width: 50px;
-  height: 30px;
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  line-height: 50px;
+  text-align: center;
+  font-size: 20pt;
 }
 
 .empty {
@@ -171,7 +223,7 @@ canvas {
     height: 10vh;
   }
   .buttonContainer button {
-    font-size: 5vh;
+    font-size: 2vh;
     line-height: 5vh;
     width: 50%;
     margin: 10px;
