--- a/style.scss
+++ b/style.scss
@@ -40,7 +40,11 @@ body {
     padding: 0;
 
     * {
-        font-family: 'cyberNumbers' !important;
+        // font-family: 'cyberNumbers' !important;
+        font-family: 'Roboto Mono',
+            monospace !important;
+
+
     }
 }
 
@@ -100,6 +104,63 @@ canvas {
     height: calc(100% / 6);
 }
 
+.formContainer {
+    position: absolute;
+    top: calc(60% - 30vh);
+    left: calc(50% - 30vw);
+    width: 60vw;
+    height: 30vh;
+    padding: 3%;
+    background-color: black;
+    border: solid 1px $cyberBlue;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    p {
+        color: $cyberBlue;
+        font-size: 30pt;
+    }
+
+    input[type='text'] {
+        margin-top: 50%;
+        background-color: $cyberYellow;
+        margin: 0 auto;
+        width: 60%;
+        height: 40px;
+        border: solid 3px $cyberBlue;
+        border-radius: 3px;
+        line-height: 40px;
+        font-size: 20pt;
+    }
+
+    input[type='text']:focus {
+        border: solid 3px $cyberPink;
+    }
+
+    button {
+        // width: 20%;
+        // overflow: auto;
+        margin: 0 auto;
+        height: 50px;
+        font-size: medium;
+        padding: 3px;
+        transition: all ease-in 0.3s;
+
+    }
+
+    button:after {
+        content: "Zapisz";
+        margin: 3px;
+    }
+
+    button:hover {
+        border: solid 1px $cyberPink;
+    }
+}
+
 .alertClass {
     position: fixed;
     margin: 0 auto;
@@ -121,9 +182,12 @@ canvas {
 
     button {
         border: solid 3px $cyberBlue;
-        width: 50px;
-        height: 30px;
-
+        width: 100px;
+        height: 50px;
+        margin: 10px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 20pt;
     }
 }
 
@@ -202,7 +266,7 @@ canvas {
         height: 10vh;
 
         button {
-            font-size: 5vh;
+            font-size: 2vh;
             line-height: 5vh;
             width: 50%;
             margin: 10px;
