--- a/style.scss
+++ b/style.scss
@@ -104,6 +104,22 @@ canvas {
     height: calc(100% / 6);
 }
 
+table {
+    border: solid 1px white;
+    margin: 0 auto;
+    margin-top: 10%;
+    width: 80vw;
+    background-color: rgba(0, 0, 0, 0.931);
+
+    th {
+        color: $cyberYellow;
+    }
+
+    tr {
+        color: $cyberBlue;
+    }
+}
+
 .formContainer {
     position: absolute;
     top: calc(60% - 30vh);
@@ -190,6 +206,7 @@ canvas {
         font-size: 20pt;
     }
 }
+
 
 .empty {
     background-color: #00ffee88 !important;
