--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-@font-face {
-  font-family: cyberNumbers;
-  src: url("./fonts/Kill The Noise.otf") format("opentype");
-}
 ::-webkit-scrollbar {
   width: 2px;
 }
@@ -12,7 +8,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #00ffed;
+  background: white;
 }
 
 /* Handle on hover */
@@ -20,14 +16,26 @@
   background: #555;
 }
 
+.overLay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
 body {
-  background-image: url("./Img/cyberBg.jpg");
-  background-repeat: no-repeat;
+  background-image: url("./Img/DarkSky.png");
+  background-repeat: repeat;
   margin: 0;
   padding: 0;
 }
 body * {
-  font-family: "Roboto Mono", monospace !important;
+  font-family: "Patrick Hand", cursive;
 }
 
 .buttonContainer {
@@ -35,28 +43,27 @@ body * {
   flex-direction: row;
   justify-content: space-around;
 }
+.buttonContainer button {
+  display: inline-block;
+  text-align: center;
+  border: solid 1px white;
+  color: white;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0);
+}
 
 .time {
-  color: #00ffed;
   text-align: center;
   margin: 0% auto;
 }
 
 .spooky_img {
-  border: solid 5px #00ffed;
+  border: solid 5px white;
 }
 
-button {
-  border: solid black 1px;
-  border-radius: 4px;
-  background-color: #caff01;
-  color: black;
-  font-weight: bold;
-}
-
-.spookySlicer {
+.sliceContainer {
   position: relative;
-  border: solid 4px #00ffed;
+  border: solid 4px white;
   margin: 0% auto;
   margin-top: 3px;
 }
@@ -88,26 +95,24 @@ canvas {
 table {
   border: solid 1px white;
   margin: 0 auto;
-  margin-top: 10%;
-  width: 80vw;
   background-color: rgba(0, 0, 0, 0.931);
 }
 table th {
-  color: #caff01;
+  color: white;
 }
 table tr {
-  color: #00ffed;
+  color: white;
 }
 
 .formContainer {
   position: absolute;
-  top: calc(60% - 30vh);
-  left: calc(50% - 30vw);
-  width: 60vw;
-  height: 30vh;
+  top: 25%;
+  left: 20%;
+  align-self: center;
+  margin: 0 auto;
   padding: 3%;
-  background-color: black;
-  border: solid 1px #00ffed;
+  background-color: rgba(0, 0, 0, 0);
+  border: solid 1px white;
   border-radius: 10px;
   text-align: center;
   display: flex;
@@ -115,63 +120,110 @@ table tr {
   justify-content: space-around;
 }
 .formContainer p {
-  color: #00ffed;
+  color: white;
   font-size: 30pt;
 }
 .formContainer input[type=text] {
   margin-top: 50%;
-  background-color: #caff01;
+  background-color: white;
   margin: 0 auto;
   width: 60%;
   height: 40px;
-  border: solid 3px #00ffed;
+  border: solid 3px white;
   border-radius: 3px;
   line-height: 40px;
   font-size: 20pt;
 }
 .formContainer input[type=text]:focus {
-  border: solid 3px #ff0082;
+  border: solid 3px white;
 }
 .formContainer button {
-  margin: 0 auto;
+  display: inline-block;
+  text-align: center;
+  border: solid 1px white;
+  color: white;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0);
+  transition: all ease-in-out 0.5s;
+}
+.formContainer button:hover {
+  color: black;
+  background-color: white;
+  cursor: pointer;
+}
+.formContainer button {
+  margin: 10px;
   height: 50px;
   font-size: medium;
   padding: 3px;
-  transition: all ease-in 0.3s;
 }
 .formContainer button:after {
-  content: "Zapisz";
+  content: "";
   margin: 3px;
-}
-.formContainer button:hover {
-  border: solid 1px #ff0082;
 }
 
 .alertClass {
   position: fixed;
-  margin: 0 auto;
+  display: inline-block;
+  background: url("./Img/DarkSky.png");
   top: calc(50% - 200px);
   left: calc(50% - 200px);
-  background-color: black;
-  width: 500px;
-  height: 100px;
-  border: solid 1px #00ffed;
+  padding: 10px;
+  background-color: white;
+  border: solid 3px white;
+  border-radius: 10px;
   text-align: center;
   padding-top: 50px;
+  z-index: 4;
 }
 .alertClass h1 {
-  color: #00ffed;
+  color: white;
   display: block;
   margin: 0 auto;
 }
 .alertClass button {
-  border: solid 3px #00ffed;
+  display: inline-block;
+  text-align: center;
+  border: solid 1px white;
+  color: white;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0);
+  transition: all ease-in-out 0.5s;
+}
+.alertClass button:hover {
+  color: black;
+  background-color: white;
+  cursor: pointer;
+}
+.alertClass button {
+  border: solid 3px white;
   width: 100px;
   height: 50px;
   margin: 10px;
   line-height: 50px;
   text-align: center;
   font-size: 20pt;
+}
+
+.dispalyResultsButtons {
+  margin: 0 auto;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+.dispalyResultsButtons button {
+  display: inline-block;
+  text-align: center;
+  border: solid 1px white;
+  color: white;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0);
+  transition: all ease-in-out 0.5s;
+}
+.dispalyResultsButtons button:hover {
+  color: black;
+  background-color: white;
+  cursor: pointer;
 }
 
 .empty {
@@ -181,65 +233,163 @@ table tr {
 @media screen and (max-width: 900px) {
   body {
     overflow-x: hidden;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: space-around;
   }
 
   .spooky_img {
     display: block;
     margin: 0 auto;
-    width: calc(100vw - 10px);
+    width: 50vw;
   }
 
   .buttonContainer {
-    width: 100vw;
     margin: 0;
   }
   .buttonContainer button {
-    width: 100%;
     min-height: 30px;
+    font-size: 4vw;
+  }
+  .buttonContainer button {
+    display: inline-block;
+    text-align: center;
+    border: solid 1px white;
+    color: white;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.5s;
   }
   .buttonContainer button:hover {
-    border: solid 1px #00ffed;
+    color: black;
+    background-color: white;
+    cursor: pointer;
+  }
+  .buttonContainer button:hover {
+    border: solid 1px white;
   }
 
   .time {
-    width: calc(100vw - 4px);
+    width: calc(100vw - 5px);
     margin-top: 10px;
     margin-bottom: 10px;
-    border: solid 2px #00ffed;
+    height: 30px;
   }
 
-  .spookySlicer {
+  .sliceContainer {
+    order: 1;
     width: calc(100vw - 8px);
     height: calc(100vw - 8px);
   }
-  .spookySlicer img {
+  .sliceContainer img {
     width: 100%;
     height: 100%;
   }
+
+  .dispalyResultsButtons {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .dispalyResultsButtons button {
+    display: inline-block;
+    text-align: center;
+    border: solid 1px white;
+    color: white;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.5s;
+  }
+  .dispalyResultsButtons button:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+  }
+  .dispalyResultsButtons button {
+    width: 90vw;
+    height: 20vh;
+    font-size: 5vw;
+  }
+
+  table {
+    width: 98vw;
+  }
+  table tr {
+    font-size: 5vw;
+  }
+
+  .resultsContainer {
+    height: 10vh;
+    display: flex;
+    justify-content: space-around;
+  }
+  .resultsContainer button {
+    display: inline-block;
+    text-align: center;
+    border: solid 1px white;
+    color: white;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.5s;
+  }
+  .resultsContainer button:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+  }
+  .resultsContainer button {
+    width: 25%;
+    font-size: 5vw;
+  }
 }
-@media screen and (min-width: 900px) {
+@media screen and (min-height: 650px) and (min-width: 900px) {
   .spooky_img {
     margin: 10px;
-    margin-left: 8%;
     display: block;
-    width: 30vw;
-    height: 30vw;
-    max-width: 700px;
-    max-height: 700px;
+    width: calc(60vw - 25vh);
+    height: calc(60vw - 25vh);
+    max-height: 75vh;
+    max-width: 75vh;
+  }
+
+  .sliceContainer {
+    position: fixed !important;
+    top: 10px;
+    right: 10px;
+    width: calc(70vw - 25vh);
+    height: calc(70vw - 25vh);
+    max-height: 75vh;
+    max-width: 75vh;
+  }
+  .sliceContainer img {
+    width: 100%;
+    height: 100%;
   }
 
   .buttonContainer {
     position: absolute;
     bottom: 0;
-    margin: 0;
-    padding: 10px;
-    width: 45vw;
+    width: 100vw;
     height: 10vh;
   }
   .buttonContainer button {
+    display: inline-block;
+    text-align: center;
+    border: solid 1px white;
+    color: white;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.5s;
+  }
+  .buttonContainer button:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+  }
+  .buttonContainer button {
     font-size: 2vh;
-    line-height: 5vh;
-    width: 50%;
+    width: 100%;
     margin: 10px;
     min-height: 30px;
   }
@@ -247,24 +397,163 @@ table tr {
   .time {
     position: absolute;
     bottom: 15vh;
-    width: 50%;
-    margin: 0;
+    width: 50vw;
+    left: calc(50vw - 25vw);
   }
   .time img {
-    width: calc(100% / 13);
     margin: 0;
-    height: 50px;
   }
 
-  .spookySlicer {
-    position: fixed !important;
-    top: 10px;
-    right: 10px !important;
-    width: calc(50vw - 40px);
-    height: calc(50vw - 40px);
+  .dispalyResultsButtons {
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
   }
-  .spookySlicer img {
+  .dispalyResultsButtons button {
+    margin: 10px;
+    width: 25vw;
+    height: 25vw;
+    font-size: 5vw;
+  }
+
+  .resultsContainer {
+    display: inline-block;
+    flex-direction: row;
+    margin: 20px;
+    width: calc(100vw - 40px);
+    height: 10vw;
+    text-align: center;
+  }
+  .resultsContainer button {
+    display: inline-block;
+    text-align: center;
+    border: solid 1px white;
+    color: white;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.5s;
+  }
+  .resultsContainer button:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+  }
+  .resultsContainer button {
+    height: 10vw;
+    width: 10vw;
+    margin: 10px;
+    font-size: 10pt;
+  }
+
+  table {
+    margin-top: 10%;
+    width: 80vw;
+  }
+}
+@media screen and (max-height: 650px) and (min-width: 890px) {
+  body {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .spooky_img {
+    width: 30vw;
+    height: 30vw;
+  }
+
+  .sliceContainer {
+    width: 30vw;
+    height: 30vw;
+  }
+  .sliceContainer img {
     width: 100%;
     height: 100%;
+  }
+
+  .buttonContainer {
+    position: absolute;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+  }
+  .buttonContainer button {
+    display: inline-block;
+    text-align: center;
+    border: solid 1px white;
+    color: white;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.5s;
+  }
+  .buttonContainer button:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+  }
+  .buttonContainer button {
+    font-size: 2vh;
+    width: 100%;
+    margin: 10px;
+    min-height: 30px;
+  }
+
+  .time {
+    position: absolute;
+    bottom: 10px;
+    width: 50vw;
+    left: calc(50vw - 25vw);
+  }
+  .time img {
+    margin: 0;
+  }
+
+  .dispalyResultsButtons {
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .dispalyResultsButtons button {
+    margin: 10px;
+    width: calc(20vw - 40px);
+    height: 20vw;
+    font-size: 5vw;
+  }
+
+  .resultsContainer {
+    display: inline-block;
+    flex-direction: column;
+    margin-top: 10%;
+    text-align: center;
+  }
+  .resultsContainer button {
+    display: inline-block;
+    text-align: center;
+    border: solid 1px white;
+    color: white;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.5s;
+  }
+  .resultsContainer button:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+  }
+  .resultsContainer button {
+    height: 10vw;
+    width: 10vw;
+    margin: 10px;
+    font-size: 20pt;
+  }
+
+  table {
+    margin-top: 10%;
+    width: 80vw;
   }
 }
