--- a/style.scss
+++ b/style.scss
@@ -87,7 +87,38 @@ body {
 }
 
 .spooky_img {
+    background-size: 100% 100%;
     border: solid 5px white;
+    // background-repeat: no-repeat;
+    @include buttonStyle();
+    -webkit-transition: background-image 0.5s linear;
+    -moz-transition: background-image 0.5s linear;
+    -o-transition: background-image 0.5s linear;
+    transition: background-image 0.5s linear;
+
+    button {
+        background-color: black;
+    }
+}
+
+.rightArrow {
+    position: relative;
+    top: 50%;
+    left: 70%;
+    width: 10%;
+    height: 10%;
+    font-size: 10pt;
+    z-index: 3;
+}
+
+.leftArrow {
+    position: relative;
+    top: 50%;
+    left: 10%;
+    width: 10%;
+    height: 10%;
+    font-size: 10pt;
+    z-index: 3;
 }
 
 
@@ -238,7 +269,7 @@ table {
 }
 
 .empty {
-    background-color: #00ffee88 !important;
+    background-color: rgba(0, 0, 0, 0) !important;
 }
 
 // dla małych komputerków 
@@ -256,7 +287,7 @@ table {
         display: block;
         margin: 0 auto;
         width: 50vw;
-
+        height: 50vw;
     }
 
     .buttonContainer {
