--- a/style.css
+++ b/style.css
@@ -58,12 +58,10 @@ body * {
 }
 
 .spooky_img {
-  background-size: 100% 100%;
   border: solid 5px white;
-  -webkit-transition: background-image 0.5s linear;
-  -moz-transition: background-image 0.5s linear;
-  -o-transition: background-image 0.5s linear;
-  transition: background-image 0.5s linear;
+  display: flex !important;
+  flex-direction: row;
+  overflow: hidden;
 }
 .spooky_img button {
   display: inline-block;
@@ -79,28 +77,14 @@ body * {
   background-color: white;
   cursor: pointer;
 }
+.spooky_img img {
+  position: relative;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .spooky_img button {
   background-color: black;
-}
-
-.rightArrow {
-  position: relative;
-  top: 50%;
-  left: 70%;
-  width: 10%;
-  height: 10%;
-  font-size: 10pt;
-  z-index: 3;
-}
-
-.leftArrow {
-  position: relative;
-  top: 50%;
-  left: 10%;
-  width: 10%;
-  height: 10%;
-  font-size: 10pt;
-  z-index: 3;
 }
 
 .sliceContainer {
@@ -286,6 +270,10 @@ table tr {
     margin: 0 auto;
     width: 50vw;
     height: 50vw;
+  }
+  .spooky_img img {
+    width: 100%;
+    height: 100%;
   }
 
   .buttonContainer {
