--- a/style.scss
+++ b/style.scss
@@ -87,39 +87,25 @@ body {
 }
 
 .spooky_img {
-    background-size: 100% 100%;
     border: solid 5px white;
-    // background-repeat: no-repeat;
+    display: flex !important;
+    flex-direction: row;
     @include buttonStyle();
-    -webkit-transition: background-image 0.5s linear;
-    -moz-transition: background-image 0.5s linear;
-    -o-transition: background-image 0.5s linear;
-    transition: background-image 0.5s linear;
+    overflow: hidden;
+
+
+    img {
+        position: relative;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 
     button {
         background-color: black;
     }
 }
 
-.rightArrow {
-    position: relative;
-    top: 50%;
-    left: 70%;
-    width: 10%;
-    height: 10%;
-    font-size: 10pt;
-    z-index: 3;
-}
-
-.leftArrow {
-    position: relative;
-    top: 50%;
-    left: 10%;
-    width: 10%;
-    height: 10%;
-    font-size: 10pt;
-    z-index: 3;
-}
 
 
 
@@ -283,11 +269,15 @@ table {
     }
 
     .spooky_img {
-        // margin-top: 5px !important;
         display: block;
         margin: 0 auto;
         width: 50vw;
         height: 50vw;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .buttonContainer {
