--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ canvas {
 }
 
 .canvasNumber3 {
-  width: calc(100% / 3);
-  height: calc(100% / 3);
+  width: 33%;
+  height: 33%;
 }
 
 .canvasNumber4 {
@@ -114,8 +114,9 @@ canvas {
 }
 
 .canvasNumber6 {
-  width: calc(100% / 6);
-  height: calc(100% / 6);
+  margin: 2.5%;
+  width: 16%;
+  height: 16%;
 }
 
 table {
